--- a/admin/src/web/templates/ecuestre/index.html
+++ b/admin/src/web/templates/ecuestre/index.html
@@ -5,11 +5,13 @@
 {% block head %}
 {{ super() }}
 <style>
+    /* Saco el subrayado de los enlaces */
     a,
     a:hover {
         text-decoration: none !important;
     }
 
+    /* Estilos para los botones de las distintas acciones */
     .action-icons {
         display: flex;
         gap: 0.5rem;
@@ -25,6 +27,7 @@
         fill: #0077AA;
     }
 
+    /* Estilos para el botón de regreso */
     .btn-back {
         transition: 0.2s !important;
         color: #222 !important;
@@ -34,11 +37,13 @@
         background-color: #ddd !important;
     }
 
+    /* Estilos para los íconos de paginación */
     #pagination>i {
         margin-top: 3px;
         transform: scale(0.8);
     }
 
+    /* Estilos para columnas ordenables */
     th>a {
         color: #0077AA;
         text-decoration: none;
@@ -49,6 +54,7 @@
         transform: scale(0.7);
     }
 
+    /* Acomodar filtros en fila */
     .form-filter-container {
         display: flex;
         flex-direction: row;
@@ -56,6 +62,8 @@
     }
 
     @media screen and (max-width: 768px) {
+
+        /* Acomodar botones en columnas */
         #main-buttons {
             flex-direction: column !important;
         }
@@ -96,6 +104,7 @@
         <p>Página de administración de caballos 🐴</p>
     </div>
     <div id="main-buttons" class="d-flex flex-row gap-3">
+        <!-- Botones principales -->
         <a data-bs-toggle="collapse" href="#search-container" role="button" aria-expanded="false"
             aria-controls="search-container" class="btn btn-outline-dark d-flex align-items-center pb-2">
             <i style="transform: scale(0.75);" class="fa fa-filter me-2 mt-1"></i>
@@ -104,11 +113,12 @@
 
         <a href="{{ url_for('ecuestre.create') }}" class="btn btn-primary d-flex align-items-center pb-2">
             <i style="transform: scale(1.4);" class="fa-light fa-plus me-2"></i>
-            Agregar nuevo
+            Nuevo
         </a>
     </div>
 </header>
 <div class="collapse mb-3 {% if search or activity_id %}show{% endif %}" id="search-container">
+    <!-- Formulario de búsqueda y filtros -->
     <form method="get" class="d-flex flex-row align-items-end gap-3" action="{{ url_for('ecuestre.index') }}">
         <div class="form-filter-container" style="flex-grow: 1;">
             <div class="form-group" style="flex-grow: 1;">
@@ -128,9 +138,9 @@
                 </select>
             </div>
         </div>
-        <div class="form-filter-container" id="form-buttons-container">
+        <div class="form-filter-container">
             <a href="{{ url_for('ecuestre.index') }}" class="btn btn-outline-secondary d-flex align-items-center">
-                Borrar filtros
+                Limpiar filtros
             </a>
             <button type="submit" class="btn btn-primary">Buscar</button>
         </div>
@@ -139,6 +149,7 @@
 <table class="table table-striped mt-3 overflow-auto">
     <thead>
         <tr>
+            <!-- Cabeceras de la tabla -->
             <th>
                 <a
                     href="{{ url_for('ecuestre.index', order_by='name', order='asc' if order_by != 'name' or order == 'desc' else 'desc', limit=limit, page=page, search=search, activity_id=activity_id) }}">
@@ -195,6 +206,7 @@
     <tbody>
         {% if horses %}
         {% for horse in horses %}
+        <!-- Render de las filas de caballos -->
         <tr>
             <td>{{ horse.name }}</td>
             <td>{{ horse.birth_date }}</td>
@@ -228,6 +240,7 @@
         {% endfor %}
         {% else %}
         <tr>
+            <!-- Render en caso que no haya resultados -->
             <td colspan="16">No hay caballos para mostrar</td>
         </tr>
         {% endif %}
