--- a/admin/src/web/templates/ecuestre/create.html
+++ b/admin/src/web/templates/ecuestre/create.html
@@ -30,6 +30,23 @@
         background-color: #f0f0f0;
     }
 
+    #assign-buttons-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+
+    }
+
+    #assign-buttons-container button {
+        color: #333;
+        font-weight: 500;
+        transition: 0.2s;
+    }
+
+    #assign-buttons-container button:hover {
+        background-color: #f0f0f0;
+    }
+
     .selected {
         background-color: #0077AA !important;
         border-color: #0077AA !important;
@@ -41,89 +58,240 @@
 {% block content %}
 <div class="container">
     <h2>🐎 Registro de caballos</h2>
-    <form class="d-flex flex-column gap-3 mt-4" action="{{ url_for('registro_pagos.create') }}" method="POST">
-        <div class="form-group">
-            <label class="mb-1" for="name">Nombre</label>
-            <input class="form-control" type="text" id="name" name="name" placeholder="Ingrese el nombre del caballo"
-                required maxlength="64">
+    <p>Formulario para registrar un nuevo caballo en la institución</p>
+    <ul id="form-tabs" class="mt-4 nav nav-tabs">
+        <li class="nav-item">
+            <button class="nav-link active" aria-current="page" onclick="changePage(0)">Información general</button>
+        </li>
+        <li class="nav-item">
+            <button class="nav-link" onclick="changePage(1)">Miembros y actividades</button>
+        </li>
+        <li class="nav-item">
+            <button class="nav-link" onclick="changePage(2)">Documentos</button>
+        </li>
+    </ul>
+    <form class="d-flex flex-column gap-3 p-4 border border-top-0 rounded-bottom"
+        action="{{ url_for('registro_pagos.create') }}" method="POST">
+        <section class="d-flex flex-column gap-3">
+            <div class="form-group">
+                <label class="mb-1" for="name">Nombre</label>
+                <input class="form-control" type="text" id="name" name="name"
+                    placeholder="Ingrese el nombre del caballo" required maxlength="64">
+            </div>
+
+            <div class="w-100 d-flex flex-row gap-3">
+                <div class="form-group w-50">
+                    <label class="mb-1" for="birth_date">Nacimiento</label>
+                    <input class="form-control" type="date" id="birth_date" name="birth_date" required>
+                </div>
+                <div class="form-group w-50">
+                    <label class="mb-1" for="entry_date">Fecha de ingreso</label>
+                    <input class="form-control" type="date" id="entry_date" name="entry_date" required>
+                </div>
+            </div>
+
+            <div class="w-100 d-flex flex-row gap-3">
+                <div class="form-group w-50">
+                    <label class="mb-1" for="gender">Sexo</label>
+                    <select class="form-select" name="gender" id="gender" required>
+                        <option selected>Seleccione una opción...</option>
+                        <option value="0">Macho</option>
+                        <option value="1">Hembra</option>
+                    </select>
+                </div>
+                <div class="form-group w-50">
+                    <label class="mb-1" for="origin">Origen</label>
+                    <select class="form-select" name="origin" id="origin" required>
+                        <option selected>Seleccione una opción...</option>
+                        <option value="0">Compra</option>
+                        <option value="1">Donación</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group w-100 d-flex flex-row gap-3">
+                <div class="w-50">
+                    <label class="mb-1" for="race">Raza</label>
+                    <input id="race" name="race" placeholder="Ingrese la raza del caballo" type="text"
+                        class="form-control" required maxlength="32">
+                </div>
+                <div class="w-50">
+                    <label class="mb-1" for="coat">Pelaje</label>
+                    <input id="coat" name="coat" placeholder="Ingrese el pelaje del caballo" type="text"
+                        class="form-control" required maxlength="32">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="mb-1" for="assigned_location">Sede asignada</label>
+                <input type="text" name="assigned_location" id="assigned_location" class="form-control"
+                    placeholder="Ingrese el nombre de la sede asignada" required>
+            </div>
+        </section>
+
+        <section class="visually-hidden d-flex flex-column gap-3">
+            <div id="assign-buttons-container">
+                <button style="flex-grow: 1.75;" type="button" class="btn border rounded" data-bs-toggle="modal"
+                    data-bs-target="#modal-activities">
+                    Actividades (0)
+                </button>
+                <button style="flex-grow: 1.75;" type="button" class="btn border rounded" data-bs-toggle="modal"
+                    data-bs-target="#modal-members">
+                    Miembros (0)
+                </button>
+            </div>
+        </section>
+
+        <section class="d-flex flex-column gap-3">
+            <button style="flex-grow: 1;" type="button" class="btn border rounded" data-bs-toggle="modal"
+                data-bs-target="#modal-files">
+                Archivos y/o documentación (0)
+            </button>
+        </section>
+
+        <div class="modal fade" id="modal-activities" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5 fw-bolder text-uppercase" id="exampleModalLabel">Asignar
+                            actividades
+                        </h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="mt-0 mb-3">
+                            Seleccione las actividades de las que formará parte el caballo.
+                        </p>
+                        <ul id="activities-list"
+                            class="p-0 d-flex gap-3 flex-wrap w-100 align-items-center justify-content-center text-center">
+                            {% if activities %}
+                            {% for activity in activities %}
+                            <li id="activity-{{activity.id}}" class="list-group-item border rounded"
+                                onclick="toggleSelected('activity', {{activity.id}})"
+                                style="flex-grow: 1; user-select: none; padding: 8px 20px !important;" role="button">{{
+                                activity.name }}</li>
+                            {% endfor %}
+                            {% endif %}
+                        </ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary">Guardar cambios</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="w-100 d-flex flex-row gap-3">
-            <div class="form-group w-50">
-                <label class="mb-1" for="birth_date">Nacimiento</label>
-                <input class="form-control" type="date" id="birth_date" name="birth_date" required>
-            </div>
-            <div class="form-group w-50">
-                <label class="mb-1" for="entry_date">Fecha de ingreso</label>
-                <input class="form-control" type="date" id="entry_date" name="entry_date" required>
+        <div class="modal fade" id="modal-members" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5 fw-bolder text-uppercase" id="exampleModalLabel">Asignar
+                            miembros
+                        </h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="mt-0 mb-0">
+                            Seleccione los miembros que estarán a cargo del caballo.
+                        </p>
+                        <div class="d-flex flex-row justify-content-around gap-2 mt-3">
+                            <div class="w-50">
+                                <h6>Entrenadores</h6>
+                                <ul id="trainers-list"
+                                    class="p-0 d-flex gap-3 flex-wrap w-100 align-items-center justify-content-center text-center">
+                                    {% if trainers %}
+                                    {% for trainer in trainers %}
+                                    <li id="activity-{{trainer.id}}" class="list-group-item border rounded"
+                                        onclick="toggleSelected('trainer', {{trainer.id}})"
+                                        style="flex-grow: 1; user-select: none; padding: 8px 20px !important;"
+                                        role="button">{{
+                                        trainer.name }}</li>
+                                    {% endfor %}
+                                    {% endif %}
+                                </ul>
+                            </div>
+                            <div class="w-50">
+                                <h6>Conductores</h6>
+                                <ul id="drivers-list"
+                                    class="p-0 d-flex gap-3 flex-wrap w-100 align-items-center justify-content-center text-center">
+                                    {% if drivers %}
+                                    {% for driver in drivers %}
+                                    <li id="activity-{{driver.id}}" class="list-group-item border rounded"
+                                        onclick="toggleSelected('activity', {{driver.id}})"
+                                        style="flex-grow: 1; user-select: none; padding: 8px 20px !important;"
+                                        role="button">{{
+                                        driver.name }}</li>
+                                    {% endfor %}
+                                    {% endif %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary">Guardar cambios</button>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="w-100 d-flex flex-row gap-3">
-            <div class="form-group w-50">
-                <label class="mb-1" for="gender">Sexo</label>
-                <select class="form-select" name="gender" id="gender" required>
-                    <option selected>Seleccione una opción...</option>
-                    <option value="0">Macho</option>
-                    <option value="1">Hembra</option>
-                </select>
-            </div>
-            <div class="form-group w-50">
-                <label class="mb-1" for="origin">Origen</label>
-                <select class="form-select" name="origin" id="origin" required>
-                    <option selected>Seleccione una opción...</option>
-                    <option value="0">Compra</option>
-                    <option value="1">Donación</option>
-                </select>
-            </div>
-        </div>
+        <div class="modal fade" id="modal-files" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5 fw-bolder text-uppercase" id="exampleModalLabel">Adjuntar
+                            documentación
+                        </h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p class="mt-0 mb-3">
+                            Adjunte los archivos y/o documentación necesaria para el caballo.
+                        </p>
+                        <div class="form-group mb-3">
+                            <label class="mb-2" for="files">Ficha general</label>
+                            <input class="form-control" type="file" id="files" name="files" multiple>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label class="mb-2" for="files">Planificación de entrenamiento</label>
+                            <input class="form-control" type="file" id="files" name="files" multiple>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label class="mb-2" for="files">Informe de evolución</label>
+                            <input class="form-control" type="file" id="files" name="files" multiple>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label class="mb-2" for="files">Carga de imágenes</label>
+                            <input class="form-control" type="file" id="files" name="files" multiple>
+                        </div>
+                        <div class="form-group mb-1">
+                            <label class="mb-2" for="files">Registros veterinarios</label>
+                            <input class="form-control" type="file" id="files" name="files" multiple>
+                        </div>
 
-        <div class="form-group w-100 d-flex flex-row gap-3">
-            <div class="w-50">
-                <label class="mb-1" for="race">Raza</label>
-                <input id="race" name="race" placeholder="Ingrese la raza del caballo" type="text" class="form-control"
-                    required maxlength="32">
+                        <!-- 
+                            No hay que hacerlo así. 
+                            Adjuntar toda la documentación y separarla por tipos, no al revés.
+                            Ejemplo en el documento del trabajo integrador.
+                        -->
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary">Guardar cambios</button>
+                    </div>
+                </div>
             </div>
-            <div class="w-50">
-                <label class="mb-1" for="coat">Pelaje</label>
-                <input id="coat" name="coat" placeholder="Ingrese el pelaje del caballo" type="text"
-                    class="form-control" required maxlength="32">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="mb-1" for="assigned_location">Sede asignada</label>
-            <input type="text" name="assigned_location" id="assigned_location" class="form-control"
-                placeholder="Ingrese el nombre de la sede asignada" required>
-        </div>
-
-        <div class="form-group">
-            <label for="activities">Actividades asignadas</label>
-            <div class="form-text mt-0 mb-2">
-                Seleccione las actividades que se le asignarán al caballo.
-            </div>
-            <ul id="activities-list"
-                class="p-0 d-flex gap-3 flex-wrap w-100 align-items-center justify-content-center text-center">
-                {% if activities %}
-                {% for activity in activities %}
-                <li id="activity-{{activity.id}}" class="list-group-item border rounded py-1"
-                    onclick="toggleSelected({{activity.id}})" style="flex-grow: 1; user-select: none;" role="button">{{
-                    activity.name }}</li>
-                {% endfor %}
-                {% endif %}
-            </ul>
         </div>
 
         <!-- Campo oculto para enviar las actividades seleccionadas al form -->
         <input type="hidden" name="selected_activities" id="selected-activities-input">
 
-        <div class="form-group">
-            <label class="mb-1" for="assigned_members">Miembros asignados</label>
+        <!-- Campo oculto para enviar los miembros seleccionadas al form -->
+        <input type="hidden" name="selected_members" id="selected-members-input">
 
-            <!-- No tengo idea cómo implementar esto -->
-        </div>
 
-        <div class="d-flex flex-row align-items-center justify-content-between w-100 mt-1">
+        <div class="d-flex flex-row align-items-center justify-content-between w-100 mt-3">
             <a id="btn-back" class="btn border border-2" href="{{ url_for('ecuestre.index') }}">
                 <i style="transform: scale(0.6);" class="fa fa-chevron-left me-1"></i>
                 Volver</a>
@@ -145,9 +313,9 @@
     const selectedActivities = [];
 
     // Función para alternar la clase 'selected' en los elementos de la lista de actividades
-    function toggleSelected(id) {
+    function toggleSelected(prefix, id) {
         // Obtener el elemento de la lista de actividades
-        const element = document.getElementById('activity-' + id);
+        const element = document.getElementById(prefix + '-' + id);
 
         // Alternar la clase 'selected' y agregar o eliminar el ID de la actividad de la lista
         if (element.classList.toggle('selected')) {
@@ -155,6 +323,29 @@
         } else {
             selectedActivities.splice(selectedActivities.indexOf(id), 1);
         }
+    }
+
+    // Función para cambiar de página en el formulario
+    function changePage(page) {
+        // Obtener las secciones del formulario
+        const sections = document.querySelectorAll('form section');
+
+        // Ocultar todas las secciones
+        sections.forEach(section => section.classList.add('visually-hidden'));
+
+        // Mostrar la sección correspondiente a la página seleccionada
+        sections[page].classList.remove('visually-hidden');
+
+        // Cambiar la clase 'active' en los botones de la barra de navegación
+        document.querySelectorAll('#form-tabs .nav-link').forEach((button, index) => {
+            if (index === page) {
+                button.classList.add('active');
+                button.attributes['aria-current'] = 'page';
+            } else {
+                button.classList.remove('active');
+                button.attributes['aria-current'] = '';
+            }
+        });
     }
 
     // Evento para actualizar el campo oculto antes de enviar el formulario
