--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -41,6 +41,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <!-- Enlaces a las secciones de la página -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% if is_authenticated(session) %}
                     <li class="nav-item">
                         <a class="nav-link {% if 'jya' in request.endpoint %}active{% endif %}" aria-current="page"
                             href="{{ url_for('jya') }}">J&A</a>
@@ -53,7 +54,9 @@
                         <a class="nav-link {% if 'team' in request.endpoint %}active{% endif %}"
                             href="{{ url_for('team.index') }}">Equipo</a>
                     </li>
+                    {% endif %}
                 </ul>
+                
                 <!-- Dropdown con las opciones de la cuenta del usuario -->
                 <div class="dropdown">
                     <button class="btn dropdown-toggle d-flex justify-content-center align-items-center gap-2 ps-2"
