--- a/admin/src/web/templates/home.html
+++ b/admin/src/web/templates/home.html
@@ -22,5 +22,5 @@
 <h1>Inicio</h1>
 <p>Pagina de inicio de la aplicacion</p>
 <h5>Hola Mundo!</h5>
-<a href="{{ url_for ('issues.index') }}">Consultas</a>
+<a href="">Consultas</a>
 {% endblock %}
