interactive rebase in progress; onto 8a802a9

--- a/admin/src/web/templates/layout.html
+++ b/admin/src/web/templates/layout.html
@@ -60,6 +60,10 @@
                         <a class="nav-link {% if 'team' in request.endpoint %}active{% endif %}"
                             href="{{ url_for('team.index') }}">Equipo</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if 'registro_pagos' in request.endpoint %}active{% endif %}"
+                            href="{{ url_for('registro_pagos.index') }}">Registro de Pagos</a>
+                    </li>
                     {% endif %}
                 </ul>
 
